exports[`test renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ECF8F7",
      "opacity": 1,
      "padding": 20,
    }
  }
  testID={undefined}>
  <Image
    size={48}
    source={
      Object {
        "uri": "http://google.com",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 36,
          "height": 72,
          "width": 72,
        },
        undefined,
      ]
    } />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#654C50",
          "fontFamily": "Avenir",
          "fontSize": 18,
        },
        Array [
          Object {
            "color": "#44B5B1",
            "fontSize": 18,
            "marginTop": 10,
          },
          Object {
            "fontFamily": "Avenir-Black",
          },
        ],
      ]
    }>
    bar
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#000000",
            "fontSize": 15,
          },
        ]
      }>
      Você
       
      pediu 
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "fontSize": 13.5,
            },
            Object {
              "color": "#000000",
              "fontSize": 15,
            },
          ],
        ]
      }>
      há 47 anos
    </Text>
  </View>
</View>
`;

exports[`test renders user name and different colors when is not currentUser 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF2F3",
      "opacity": 1,
      "padding": 20,
    }
  }
  testID={undefined}>
  <Image
    size={48}
    source={
      Object {
        "uri": "http://google.com",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 36,
          "height": 72,
          "width": 72,
        },
        undefined,
      ]
    } />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#654C50",
          "fontFamily": "Avenir",
          "fontSize": 18,
        },
        Array [
          Object {
            "color": "#FF7F85",
            "fontSize": 18,
            "marginTop": 10,
          },
          Object {
            "fontFamily": "Avenir-Black",
          },
        ],
      ]
    }>
    bar
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#000000",
            "fontSize": 15,
          },
        ]
      }>
      foo
       
      pediu 
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "fontSize": 13.5,
            },
            Object {
              "color": "#000000",
              "fontSize": 15,
            },
          ],
        ]
      }>
      há 47 anos
    </Text>
  </View>
</View>
`;
